--- a/DwGuideAnimationDemo/Base.lproj/Main.storyboard
+++ b/DwGuideAnimationDemo/Base.lproj/Main.storyboard
@@ -289,13 +289,25 @@
                                     <constraint firstAttribute="height" constant="137" id="s8a-0v-ovY"/>
                                 </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="guide_third_page_img_phone" translatesAutoresizingMaskIntoConstraints="NO" id="aom-i0-imD">
-                                <rect key="frame" x="207" y="525" width="207" height="133"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QgF-9X-Sai">
+                                <rect key="frame" x="207" y="523" width="414" height="346"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="guide_third_page_img_phone" translatesAutoresizingMaskIntoConstraints="NO" id="aom-i0-imD">
+                                        <rect key="frame" x="0.0" y="0.0" width="207" height="133"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="207" id="JVE-bO-Ubm"/>
+                                            <constraint firstAttribute="height" constant="133" id="khs-g5-cZ7"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="207" id="JVE-bO-Ubm"/>
-                                    <constraint firstAttribute="height" constant="133" id="khs-g5-cZ7"/>
+                                    <constraint firstAttribute="height" constant="346" id="OOY-am-LfU"/>
+                                    <constraint firstAttribute="width" constant="414" id="cuu-Rw-P2p"/>
+                                    <constraint firstItem="aom-i0-imD" firstAttribute="top" secondItem="QgF-9X-Sai" secondAttribute="top" id="ob4-ia-0fG"/>
+                                    <constraint firstItem="aom-i0-imD" firstAttribute="leading" secondItem="QgF-9X-Sai" secondAttribute="leading" id="pqV-Ox-ezx"/>
                                 </constraints>
-                            </imageView>
+                            </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="guide_third_page_img_mart" translatesAutoresizingMaskIntoConstraints="NO" id="lzh-Cn-vGI">
                                 <rect key="frame" x="254.5" y="329" width="122" height="60"/>
                                 <constraints>
@@ -326,11 +338,11 @@
                             <constraint firstItem="lzh-Cn-vGI" firstAttribute="leading" secondItem="G9z-DB-t8f" secondAttribute="leading" constant="189" id="86U-GJ-JVB"/>
                             <constraint firstItem="qYM-IH-OSC" firstAttribute="bottom" secondItem="G9z-DB-t8f" secondAttribute="bottom" constant="-230" id="D34-3G-mG6"/>
                             <constraint firstItem="qYM-IH-OSC" firstAttribute="leading" secondItem="G9z-DB-t8f" secondAttribute="leading" constant="219" id="Fkh-aU-SfI"/>
+                            <constraint firstAttribute="trailing" secondItem="QgF-9X-Sai" secondAttribute="trailing" constant="-207" id="Ims-K7-oQu"/>
                             <constraint firstItem="jde-fV-fPK" firstAttribute="leading" secondItem="G9z-DB-t8f" secondAttribute="leading" constant="37" id="Tl0-pj-f5c"/>
+                            <constraint firstItem="QgF-9X-Sai" firstAttribute="bottom" secondItem="G9z-DB-t8f" secondAttribute="bottom" constant="190" id="VpJ-Bi-AHc"/>
                             <constraint firstItem="RDm-rs-ufn" firstAttribute="leading" secondItem="lSa-Or-62s" secondAttribute="leading" constant="-2" id="dbW-OP-g4h"/>
                             <constraint firstAttribute="trailing" secondItem="G9z-DB-t8f" secondAttribute="trailing" id="dxK-QE-opH"/>
-                            <constraint firstItem="aom-i0-imD" firstAttribute="trailing" secondItem="G9z-DB-t8f" secondAttribute="trailing" id="jZr-Jc-VTw"/>
-                            <constraint firstItem="aom-i0-imD" firstAttribute="bottom" secondItem="G9z-DB-t8f" secondAttribute="bottom" constant="-21" id="nKA-LC-f3z"/>
                             <constraint firstItem="hyg-ER-8ip" firstAttribute="leading" secondItem="G9z-DB-t8f" secondAttribute="leading" constant="219" id="nqN-zG-Ol0"/>
                             <constraint firstItem="lzh-Cn-vGI" firstAttribute="bottom" secondItem="G9z-DB-t8f" secondAttribute="bottom" constant="-290" id="t6M-XI-wrh"/>
                             <constraint firstItem="RDm-rs-ufn" firstAttribute="top" secondItem="lSa-Or-62s" secondAttribute="bottom" id="tLX-sG-jh4"/>
@@ -340,6 +352,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="handAndMobileView" destination="QgF-9X-Sai" id="iAT-z6-stz"/>
                         <outlet property="imageView1" destination="lzh-Cn-vGI" id="J3H-lm-v7B"/>
                         <outlet property="imageView2" destination="jde-fV-fPK" id="VjK-N3-ysU"/>
                         <outlet property="imageView3" destination="qYM-IH-OSC" id="dda-Av-lSb"/>
